--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.14"
 dependencies = [
+    "ruff>=0.14.4",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
 ]
