added optional dependencies for pytorch cpu and gpu

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,27 +6,41 @@ readme = "README.md"
 authors = [
     { name = "ajdsouza", email = "aj.anthonydsouza@gmail.com" }
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 dependencies = [
     "datasets==4.4.1",
     "ipykernel>=7.1.0",
+    "requests>=2.32.5",
     "ruff>=0.14.4",
-    "torch>=2.9.0",
-    "torchvision>=0.24.0",
     "tqdm>=4.66.5",
-    "transformers>=4.57.1",
     "wandb>=0.23.0",
 ]
 
+[project.optional-dependencies]
+cpu = [
+    "torch>=2.9.0"
+]
+gpu = [
+    "torch>=2.9.0"
+]
+
+[tool.uv]
+conflicts = [
+    [
+        {extra = "cpu"},
+        {extra = "gpu"},
+    ]
+]
 [build-system]
 requires = ["uv_build>=0.9.8,<0.10.0"]
 build-backend = "uv_build"
 
 [tool.uv.sources]
 bert = { path = "src" }
-torch = { index = "pytorch-cpu" }
-torchvision = { index = "pytorch-cpu" }
-torchaudio = { index = "pytorch-cpu" }
+torch = [
+    {index = "pytorch-cpu", extra = "cpu"},
+    {index = "pytorch-gpu", extra = "gpu"}
+]
 
 [[tool.uv.index]]
 name = "pypi"
@@ -35,4 +49,10 @@ url = "https://pypi.org/simple"
 [[tool.uv.index]]
 name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-gpu"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
 
