--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "requests>=2.32.5",
     "ruff>=0.14.4",
     "tqdm>=4.66.5",
+    "transformers>=4.57.3",
     "wandb>=0.23.0",
 ]
 
